--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Project Section Start -->
    
-  <section class="project-section"><br><br><br><br><br><br><br>
+  <section class="project-section"><br><br><br>
      <h1 style="text-align: center;"><span style="color:#f35033f3;">LATEST</span> <span style="color: #37374bec;">WORKING PROJECT</span></h1><br><br><br><br>
      <div class="cards">
          <img src="./images/project-img-1.png" alt="project">
